a1/brendan_gordon/TEST_PROGRAMS/invalidtype/yanis_hattab/invalid1.min
# assign float to int type error

var _ : float;
var x : int;
var y : float;
var s : string;

x = 2.0;

